src/targets/udblogo/java/flipsTargetUdbLogoParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 flipsTargetUdbLogo.g 2010-09-14 22:36:32

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class flipsTargetUdbLogoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FLY", "LTR", "CMD", "PAR", "RPT", "NUM", "TIM", "FRV", "END", "POS", "X", "FIX", "REL", "GEO", "Y", "Z", "ROL", "PIT", "YAW", "PRE", "VEL", "SPD", "AIR", "GND", "ACT", "ELE", "AIL", "RUD", "FLA", "THR", "PCT", "RPM", "TRI", "RAD", "DIR", "L", "R", "CW", "CCW", "FloatingPointLiteral", "BinaryLiteral", "OctalLiteral", "DecimalLiteral", "HexLiteral", "Identifier", "StringLiteral", "Digit", "NonZeroDigit", "BinaryDigit", "HexDigit", "Exponent", "WS", "Comment", "LineComment", "'-'"
    };
    public static final int AIL=30;
    public static final int FIX=15;
    public static final int THR=33;
    public static final int FLA=32;
    public static final int OctalLiteral=45;
    public static final int SPD=25;
    public static final int AIR=26;
    public static final int LineComment=57;
    public static final int Exponent=54;
    public static final int YAW=22;
    public static final int PRE=23;
    public static final int EOF=-1;
    public static final int HexDigit=53;
    public static final int Identifier=48;
    public static final int ROL=20;
    public static final int TIM=10;
    public static final int T__58=58;
    public static final int Comment=56;
    public static final int FRV=11;
    public static final int POS=13;
    public static final int RAD=37;
    public static final int ELE=29;
    public static final int PAR=7;
    public static final int GEO=17;
    public static final int HexLiteral=47;
    public static final int ACT=28;
    public static final int GND=27;
    public static final int L=39;
    public static final int VEL=24;
    public static final int TRI=36;
    public static final int CMD=6;
    public static final int REL=16;
    public static final int PIT=21;
    public static final int R=40;
    public static final int Digit=50;
    public static final int DecimalLiteral=46;
    public static final int Y=18;
    public static final int X=14;
    public static final int NUM=9;
    public static final int CCW=42;
    public static final int Z=19;
    public static final int StringLiteral=49;
    public static final int RPT=8;
    public static final int CW=41;
    public static final int WS=55;
    public static final int FLY=4;
    public static final int RUD=31;
    public static final int LTR=5;
    public static final int DIR=38;
    public static final int NonZeroDigit=51;
    public static final int BinaryLiteral=44;
    public static final int BinaryDigit=52;
    public static final int FloatingPointLiteral=43;
    public static final int PCT=34;
    public static final int END=12;
    public static final int RPM=35;

    // delegates
    // delegators


        public flipsTargetUdbLogoParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public flipsTargetUdbLogoParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return flipsTargetUdbLogoParser.tokenNames; }
    public String getGrammarFileName() { return "flipsTargetUdbLogo.g"; }


      public StringBuilder output = new StringBuilder();
      public int indent = 0;

      public void emitIndent() {
        for (int i = 0; i < indent; i++) {
          output.append("\t");
        }
      }

      public void emit(String instruction) {
        emitIndent();
        output.append(instruction + "\n");
      }

      public void emit(String instruction, double value) {
        emitIndent();
        output.append(instruction + "(" + value + ")" + "\n");
      }

      public void emit(String instruction, double value0, double value1) {
        emitIndent();
        output.append(instruction + "(" + value0 + "," + value1 + ")" + "\n");
      }



    // $ANTLR start "flightPlan"
    // flipsTargetUdbLogo.g:60:1: flightPlan : ( instruction )* ;
    public final void flightPlan() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:61:2: ( ( instruction )* )
            // flipsTargetUdbLogo.g:61:4: ( instruction )*
            {
            emit("const struct logoInstructionDef instructions[] = {");
            indent++;
            // flipsTargetUdbLogo.g:63:3: ( instruction )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=FLY && LA1_0<=58)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // flipsTargetUdbLogo.g:63:3: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_flightPlan42);
            	    instruction();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            indent--;
            emit("} ;");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "flightPlan"


    // $ANTLR start "instruction"
    // flipsTargetUdbLogo.g:68:1: instruction : ( fly | loiter | command | repeat | position | velocity | speed | actuator | trim | time | radius | direction );
    public final void instruction() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:69:2: ( fly | loiter | command | repeat | position | velocity | speed | actuator | trim | time | radius | direction )
            int alt2=12;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // flipsTargetUdbLogo.g:69:4: fly
                    {
                    pushFollow(FOLLOW_fly_in_instruction62);
                    fly();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:70:4: loiter
                    {
                    pushFollow(FOLLOW_loiter_in_instruction67);
                    loiter();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // flipsTargetUdbLogo.g:71:4: command
                    {
                    pushFollow(FOLLOW_command_in_instruction72);
                    command();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // flipsTargetUdbLogo.g:72:4: repeat
                    {
                    pushFollow(FOLLOW_repeat_in_instruction77);
                    repeat();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // flipsTargetUdbLogo.g:73:4: position
                    {
                    pushFollow(FOLLOW_position_in_instruction82);
                    position();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // flipsTargetUdbLogo.g:74:4: velocity
                    {
                    pushFollow(FOLLOW_velocity_in_instruction87);
                    velocity();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // flipsTargetUdbLogo.g:75:4: speed
                    {
                    pushFollow(FOLLOW_speed_in_instruction92);
                    speed();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // flipsTargetUdbLogo.g:76:4: actuator
                    {
                    pushFollow(FOLLOW_actuator_in_instruction97);
                    actuator();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // flipsTargetUdbLogo.g:77:4: trim
                    {
                    pushFollow(FOLLOW_trim_in_instruction102);
                    trim();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // flipsTargetUdbLogo.g:78:4: time
                    {
                    pushFollow(FOLLOW_time_in_instruction107);
                    time();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // flipsTargetUdbLogo.g:79:4: radius
                    {
                    pushFollow(FOLLOW_radius_in_instruction112);
                    radius();

                    state._fsp--;


                    }
                    break;
                case 12 :
                    // flipsTargetUdbLogo.g:80:4: direction
                    {
                    pushFollow(FOLLOW_direction_in_instruction117);
                    direction();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "fly"
    // flipsTargetUdbLogo.g:85:1: fly : FLY ;
    public final void fly() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:85:5: ( FLY )
            // flipsTargetUdbLogo.g:85:7: FLY
            {
            match(input,FLY,FOLLOW_FLY_in_fly129); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fly"


    // $ANTLR start "loiter"
    // flipsTargetUdbLogo.g:87:1: loiter : LTR ;
    public final void loiter() throws RecognitionException {
        try {
            // flipsTargetUdbLogo.g:87:8: ( LTR )
            // flipsTargetUdbLogo.g:87:10: LTR
            {
            match(input,LTR,FOLLOW_LTR_in_loiter137); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "loiter"


    // $ANTLR start "command"
    // flipsTargetUdbLogo.g:89:1: command : ( CMD x= integerValue | CMD PAR y= numericValue );
    public final void command() throws RecognitionException {
        int x = 0;

        double y = 0.0;


        try {
            // flipsTargetUdbLogo.g:89:9: ( CMD x= integerValue | CMD PAR y= numericValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CMD) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==PAR) ) {
                    alt3=2;
                }
                else if ( ((LA3_1>=BinaryLiteral && LA3_1<=HexLiteral)||LA3_1==58) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // flipsTargetUdbLogo.g:89:11: CMD x= integerValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command145); 
                    pushFollow(FOLLOW_integerValue_in_command149);
                    x=integerValue();

                    state._fsp--;

                    emit("// CMD " + x);

                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:90:4: CMD PAR y= numericValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command156); 
                    match(input,PAR,FOLLOW_PAR_in_command158); 
                    pushFollow(FOLLOW_numericValue_in_command162);
                    y=numericValue();

                    state._fsp--;

                    emit("// CMD PAR " + y);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "command"


    // $ANTLR start "repeat"
    // flipsTargetUdbLogo.g:93:1: repeat : ( RPT NUM x= numericValue | RPT TIM x= numericValue | RPT FRV | RPT END );
    public final void repeat() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetUdbLogo.g:93:8: ( RPT NUM x= numericValue | RPT TIM x= numericValue | RPT FRV | RPT END )
            int alt4=4;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==RPT) ) {
                switch ( input.LA(2) ) {
                case NUM:
                    {
                    alt4=1;
                    }
                    break;
                case TIM:
                    {
                    alt4=2;
                    }
                    break;
                case FRV:
                    {
                    alt4=3;
                    }
                    break;
                case END:
                    {
                    alt4=4;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // flipsTargetUdbLogo.g:93:10: RPT NUM x= numericValue
                    {
                    match(input,RPT,FOLLOW_RPT_in_repeat174); 
                    match(input,NUM,FOLLOW_NUM_in_repeat176); 
                    pushFollow(FOLLOW_numericValue_in_repeat180);
                    x=numericValue();

                    state._fsp--;

                    emit("REPEAT",x);
                    indent++;

                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:94:4: RPT TIM x= numericValue
                    {
                    match(input,RPT,FOLLOW_RPT_in_repeat189); 
                    match(input,TIM,FOLLOW_TIM_in_repeat191); 
                    pushFollow(FOLLOW_numericValue_in_repeat195);
                    x=numericValue();

                    state._fsp--;

                    emit("// RPT TIM " + x);
                    indent++;

                    }
                    break;
                case 3 :
                    // flipsTargetUdbLogo.g:95:4: RPT FRV
                    {
                    match(input,RPT,FOLLOW_RPT_in_repeat204); 
                    match(input,FRV,FOLLOW_FRV_in_repeat206); 
                    emit("REPEAT_FOREVER");
                    indent++;

                    }
                    break;
                case 4 :
                    // flipsTargetUdbLogo.g:96:4: RPT END
                    {
                    match(input,RPT,FOLLOW_RPT_in_repeat215); 
                    match(input,END,FOLLOW_END_in_repeat217); 
                    indent--;
                    emit("END");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "repeat"


    // $ANTLR start "position"
    // flipsTargetUdbLogo.g:101:1: position : ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | ~ ( POS X FIX x= numericValue ) POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue | POS X FIX x= numericValue POS Y FIX y= numericValue );
    public final void position() throws RecognitionException {
        double x = 0.0;

        double y = 0.0;


        try {
            // flipsTargetUdbLogo.g:101:9: ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | ~ ( POS X FIX x= numericValue ) POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue | POS X FIX x= numericValue POS Y FIX y= numericValue )
            int alt5=17;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // flipsTargetUdbLogo.g:101:11: POS X FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position232); 
                    match(input,X,FOLLOW_X_in_position234); 
                    match(input,FIX,FOLLOW_FIX_in_position236); 
                    pushFollow(FOLLOW_numericValue_in_position240);
                    x=numericValue();

                    state._fsp--;

                    emit("EAST",x);

                    }
                    break;
                case 2 :
                    // flipsTargetUdbLogo.g:102:4: POS X REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position247); 
                    match(input,X,FOLLOW_X_in_position249); 
                    match(input,REL,FOLLOW_REL_in_position251); 
                    pushFollow(FOLLOW_numericValue_in_position255);
                    x=numericValue();

                    state._fsp--;

                    emit("FD",x);

                    }
                    break;
                case 3 :
                    // flipsTargetUdbLogo.g:103:4: POS X GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position262); 
                    match(input,X,FOLLOW_X_in_position264); 
                    match(input,GEO,FOLLOW_GEO_in_position266); 
                    pushFollow(FOLLOW_numericValue_in_position270);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS X GEO " + x);

                    }
                    break;
                case 4 :
                    // flipsTargetUdbLogo.g:104:4: ~ ( POS X FIX x= numericValue ) POS Y FIX x= numericValue
                    {
                    if ( (input.LA(1)>=FLY && input.LA(1)<=END)||(input.LA(1)>=X && input.LA(1)<=58) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    match(input,POS,FOLLOW_POS_in_position290); 
                    match(input,Y,FOLLOW_Y_in_position292); 
                    match(input,FIX,FOLLOW_FIX_in_position294); 
                    pushFollow(FOLLOW_numericValue_in_position298);
                    x=numericValue();

                    state._fsp--;

                    emit("NORTH",x);

                    }
                    break;
                case 5 :
                    // flipsTargetUdbLogo.g:105:4: POS Y REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position305); 
                    match(input,Y,FOLLOW_Y_in_position307); 
                    match(input,REL,FOLLOW_REL_in_position309); 
                    pushFollow(FOLLOW_numericValue_in_position313);
                    x=numericValue();

                    state._fsp--;

                    emit("RT",x);

                    }
                    break;
                case 6 :
                    // flipsTargetUdbLogo.g:106:4: POS Y GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position320); 
                    match(input,Y,FOLLOW_Y_in_position322); 
                    match(input,GEO,FOLLOW_GEO_in_position324); 
                    pushFollow(FOLLOW_numericValue_in_position328);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS Y GEO " + x);

                    }
                    break;
                case 7 :
                    // flipsTargetUdbLogo.g:107:4: POS Z FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position335); 
                    match(input,Z,FOLLOW_Z_in_position337); 
                    match(input,FIX,FOLLOW_FIX_in_position339); 
                    pushFollow(FOLLOW_numericValue_in_position343);
                    x=numericValue();

                    state._fsp--;

                    emit("SET_ALT",-x);

                    }
                    break;
                case 8 :
                    // flipsTargetUdbLogo.g:108:4: POS Z REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position350); 
                    match(input,Z,FOLLOW_Z_in_position352); 
                    match(input,REL,FOLLOW_REL_in_position354); 
                    pushFollow(FOLLOW_numericValue_in_position358);
                    x=numericValue();

                    state._fsp--;

                    emit("ALT_DOWN",x);

                    }
                    break;
                case 9 :
                    // flipsTargetUdbLogo.g:109:4: POS ROL FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position365); 
                    match(input,ROL,FOLLOW_ROL_in_position367); 
                    match(input,FIX,FOLLOW_FIX_in_position369); 
                    pushFollow(FOLLOW_numericValue_in_position373);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS ROL FIX " + x);

                    }
                    break;
                case 10 :
                    // flipsTargetUdbLogo.g:110:4: POS ROL REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position380); 
                    match(input,ROL,FOLLOW_ROL_in_position382); 
                    match(input,REL,FOLLOW_REL_in_position384); 
                    pushFollow(FOLLOW_numericValue_in_position388);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS ROL REL " + x);

                    }
                    break;
                case 11 :
                    // flipsTargetUdbLogo.g:111:4: POS PIT FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position395); 
                    match(input,PIT,FOLLOW_PIT_in_position397); 
                    match(input,FIX,FOLLOW_FIX_in_position399); 
                    pushFollow(FOLLOW_numericValue_in_position403);
                    x=numericValue();

                    state._fsp--;

                    emit("// POS PIT FIX " + x);
